--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Cabecera del periódico -->
 <header>
     <hr>
-    <img src="/succes/logo1.png" alt="Imagen del logo" class="imagen-logo">
+    <img src="success/logo1.png" alt="Imagen del logo" class="imagen-logo">
 
     <div class="nombre-periodico">
         <h1>Lorem Ipsum News</h1>
@@ -58,7 +58,7 @@
         <button type="submit" class="btn btn-primary">Página 4</button>
     </div>
     <div class="news-image">
-        <img src="/succes/imagen-principal.png" alt="Imagen de la noticia principal" class="imagen-principal">
+        <img src="success/imagen-principal.png" alt="Imagen de la noticia principal" class="imagen-principal">
         <figcaption>Imagen referencia de lorem ipsum</figcaption>
     </div>
 </div>
@@ -67,7 +67,7 @@
 <!-- Otras noticias -->
 <section class="otras-noticias">
     <div class="noticia1">
-        <img src="/succes/imagen-cuadro1.png" alt="Imagen de la noticia 1" class="imagen-cuadro">
+        <img src="success/imagen-cuadro1.png" alt="Imagen de la noticia 1" class="imagen-cuadro">
         <div class="contenido-noticia">
             <h3>What is Lorem Ipsum?</h3>
             <p class="subtitulo-noticia">Subtítulo de la noticia 1.</p>
@@ -77,7 +77,7 @@
     </div>
 
     <div class="noticia2">
-        <img src="/succes/imagen-cuadro2.png" alt="Imagen de la noticia 2" class="imagen-cuadro">
+        <img src="success/imagen-cuadro2.png" alt="Imagen de la noticia 2" class="imagen-cuadro">
         <div class="contenido-noticia">
             <h3>Why do we use it?</h3>
             <p class="subtitulo-noticia">Subtítulo de la noticia 2.</p>
@@ -87,7 +87,7 @@
     </div>
 
     <div class="noticia3">
-        <img src="/succes/imagen-cuadro3.png" alt="Imagen de la noticia 3" class="imagen-cuadro">
+        <img src="success/imagen-cuadro3.png" alt="Imagen de la noticia 3" class="imagen-cuadro">
         <div class="contenido-noticia">
             <h3>Where does it come from?</h3>
             <p class="subtitulo-noticia">Subtítulo de la noticia 3.</p>
@@ -97,7 +97,7 @@
     </div>
 
     <div class="noticia4">
-        <img src="/succes/imagen-cuadro4.png" alt="Imagen de la noticia 4" class="imagen-cuadro">
+        <img src="success/imagen-cuadro4.png" alt="Imagen de la noticia 4" class="imagen-cuadro">
         <div class="contenido-noticia">
             <h3>Where can I get some?</h3>
             <p class="subtitulo-noticia">Subtítulo de la noticia 4.</p>
